# project1_Bialkovskii_Egor_M25-255

./: .gitignore  Asciinema_test  Makefile  README.md  pyproject.toml  test.py
labyrinth_game/: constants.py  main.py  player_actions.py  utils.py
